<resources>
    <!-- app -->
    <string name="app_name">Forpet</string>
    <string name="app_ci">반려동물을 위한 모든 장소 \'포펫\'</string>
    <string name="app_db_name">forpet.sqlite</string>
    <!-- facebook -->
    <string name="facebook_app_id">591424385022023</string>
    <string name="fb_login_protocol_scheme">fb591424385022023</string>
    <!-- shared preference -->
    <string name="shared_name">app_data</string>
    <string name="shared_key_favorite">favorite</string>
    <string name="shared_key_fcm_token">token</string>
    <!-- firebase cloud messaging -->
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_pet">PetActivity</string>
    <!-- bottom navigation view menu -->
    <string name="menu_item_shop">반려용품샵</string>
    <string name="menu_item_pharmacy">약국</string>
    <string name="menu_item_hospital">병원</string>
    <string name="menu_item_beauty">미용</string>
    <string name="menu_item_more">더보기</string>
    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_desc">Navigation header</string>
    <string name="navigation_item_favorite">자주찾는 곳</string>
    <string name="navigation_item_hospital">병원/약국 등록</string>
    <string name="navigation_item_ground">뱐려동물 동반가능 장소등록</string>
    <string name="navigation_item_ad">광고 요청하기</string>
    <!-- tab layout -->
    <string name="tab_item_name">이름</string>
    <string name="tab_item_region">지역</string>
    <string name="tab_item_dog">강아지</string>
    <string name="tab_item_cat">고양이</string>
    <string name="tab_item_emergency">응급상황가이드</string>
    <string name="tab_item_common_disease">인수공통감염병</string>
    <!-- header -->
    <string name="header_ad">광고 요청하기</string>
    <string name="header_dist">km</string>
    <string name="header_evaluate">평가하기</string>
    <string name="header_event">이벤트</string>
    <string name="header_health">건강관리</string>
    <string name="header_intro">간단소개</string>
    <string name="header_infection">- 감염경로</string>
    <string name="header_info"> 부가정보</string>
    <string name="header_meal">사료 선택하기</string>
    <string name="header_medicine">구비약품</string>
    <string name="header_modify">수정요청</string>
    <string name="header_option">고객편의</string>
    <string name="header_precaution">주의사항</string>
    <string name="header_prevention">- 예방하기</string>
    <string name="header_recommend">만족도평가</string>
    <string name="header_recommend_consensus">펫과의교감</string>
    <string name="header_recommend_facility">시설</string>
    <string name="header_recommend_forpet">포펫평가</string>
    <string name="header_recommend_price">가격</string>
    <string name="header_recommend_kindness">친절</string>
    <string name="header_regist">등록요청</string>
    <string name="header_spec">특징</string>
    <string name="header_strong">장점</string>
    <string name="header_symptom">- 증상</string>
    <string name="header_time">운영시간</string>
    <string name="header_treatment_pay">치료비 공개</string>
    <string name="header_vaccine">예방접종</string>
    <string name="header_week">단점</string>
    <!-- global -->
    <string name="all_call">전화하기</string>
    <string name="all_choice">선택</string>
    <string name="all_favorite">즐겨찾기</string>
    <string name="all_navigate">길찾기</string>
    <string name="all_opened">영업중</string>
    <string name="all_photo">사진</string>
    <string name="all_place">장소</string>
    <string name="regist_notice">내용을 상세하게 작성해 주셔야 등록이 가능합니다.\n요청내용을 확인 후 담당자가 전화로 확인하는\n과정을 거칩니다.</string>
    <string name="search_hint">검색어를 입력해 주세요</string>
    <string name="vaccine_source">[자료출처 : 농림축산검역본부]</string>
    <!-- dummy -->
    <string name="dummy_addr">서울특별시 강남구 역삼동 테헤란로 152</string>
    <string name="dummy_birth">2019.01.01</string>
    <string name="dummy_email">forpet@forpet.kr</string>
    <string name="dummy_name">구글코리아</string>
    <string name="dummy_pet">닥스훈트</string>
    <string name="dummy_phone">010-0000-0000</string>
    <string name="dummy_time">월~금 : 오전 9시~ 오후 9시\n토 : 오전 9시 ~ 오후 1시\n일 : 휴일</string>
    <string name="dummy_url">http://forpet.kr/</string>
    <string name="dummy_weight">5.5kg</string>
</resources>