<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="97dp"
    android:background="@drawable/bg_toolbar"
    android:elevation="5dp">

    <TextView
        android:id="@+id/text_main_pager_dist"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:text="@string/header_dist"
        android:textColor="#ff6586"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_main_pager_name"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:text="@string/dummy_name"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_main_pager_dist"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridlayout_main_pager_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@+id/text_main_pager_addr"
        app:layout_constraintTop_toBottomOf="@+id/text_main_pager_addr" />

    <TextView
        android:id="@+id/text_main_pager_addr"
        style="@style/NanumSquareStyle"
        android:layout_marginTop="4dp"
        android:text="@string/dummy_addr"
        android:textColor="#444444"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/text_main_pager_dist"
        app:layout_constraintTop_toBottomOf="@+id/text_main_pager_dist" />

    <Button
        android:id="@+id/button_main_pager_navigate"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_stroke_pink_15dp"
        android:text="@string/all_navigate"
        android:textColor="#ff6586"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main_pager_call" />

    <Button
        android:id="@+id/button_main_pager_call"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_stroke_pink_15dp"
        android:text="@string/all_call"
        android:textColor="#ff6586"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>