<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/image_navigation_photo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg_oval_gray"
        android:contentDescription="@string/navigation_header_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_navigation_close"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/icon_close_x"
        android:contentDescription="@string/navigation_header_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_navigation_pet"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/dummy_pet"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_navigation_photo"
        app:layout_constraintTop_toTopOf="@+id/image_navigation_photo" />

    <TextView
        android:id="@+id/text_navigation_birth"
        style="@style/NanumSquareStyle"
        android:text="@string/dummy_birth"
        android:textColor="#4b4b4b"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/text_navigation_pet"
        app:layout_constraintTop_toBottomOf="@+id/text_navigation_pet" />

    <TextView
        android:id="@+id/text_navigation_weight"
        style="@style/NanumSquareStyle"
        android:lineSpacingExtra="4sp"
        android:text="@string/dummy_weight"
        android:textColor="#4b4b4b"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/text_navigation_birth"
        app:layout_constraintTop_toBottomOf="@+id/text_navigation_birth" />

    <ImageView
        android:id="@+id/image_navigation_favorite"
        android:layout_width="12dp"
        android:layout_height="18dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/icon_favorite"
        android:contentDescription="@string/navigation_header_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_navigation_photo" />

    <TextView
        android:id="@+id/text_navigation_favorite"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="15dp"
        android:text="@string/navigation_item_favorite"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/image_navigation_favorite"
        app:layout_constraintTop_toTopOf="@+id/image_navigation_favorite" />

    <ListView
        android:id="@+id/list_navigation_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="21dp"
        android:maxHeight="162dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_navigation_favorite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/list_navigation_favorite">

        <Button
            android:id="@+id/button_navigation_hospital"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rect_white"
            android:drawableStart="@drawable/icon_hospital"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="14dp"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/navigation_item_hospital"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_navigation_ground"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rect_white"
            android:drawableStart="@drawable/icon_ani_shop"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="14dp"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/navigation_item_ground"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_navigation_ad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_rect_white"
            android:drawableStart="@drawable/icon_event"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="14dp"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:text="@string/navigation_item_ad"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>