<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_disease_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/header_infection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_infection"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_disease_infection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/header_symptom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_symptom"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_disease_symptom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/header_prevention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_prevention"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_disease_prevention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>