<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/header_vaccine"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/header_vaccine"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_vaccine"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorHeight="2dp"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/TabTextAppearance">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_dog" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_cat" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_vaccine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tab_layout_vaccine"
            app:layout_constraintEnd_toEndOf="@+id/tab_layout_vaccine"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tab_layout_vaccine"
            app:layout_constraintTop_toBottomOf="@+id/header_vaccine" />

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
