<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.recommend.RecommendActivity">

    <TextView
        android:id="@+id/header_recommend"
        style="@style/NanumSquareStyle"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/header_recommend"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_recommend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/bg_stroke_gray_8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_recommend">

        <RadioGroup
            android:id="@+id/radiogroup_recommend_consensus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <TextView
                style="@style/NanumSquareStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_recommend_consensus" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_recommend_facility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <TextView
                style="@style/NanumSquareStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_recommend_facility" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_recommend_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <TextView
                style="@style/NanumSquareStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_recommend_price" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup_recommend_kindness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <TextView
                style="@style/NanumSquareStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_recommend_kindness" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </RadioGroup>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_recommend_receipt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/bg_stroke_gray_8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_recommend_evaluate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_recommend" />

    <Button
        android:id="@+id/button_recommend_evaluate"
        style="@style/NanumSquareStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/bg_stroke_gray_8dp"
        android:text="@string/header_evaluate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>